[package]
name = "vonage"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3.5"
hmac = "0.9.0"
hyper = "0.13.7"
hyper-tls = "0.4.3"
jsonwebtoken = "7.2.0"
md-5 = "0.9.1"
phonenumber = "0.2.4"
rand = "0.7.3"
sha-1 = "0.9.1"
sha2 = "0.9.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_urlencoded = "0.7.0"
thiserror = "1.0.20"
uuid = { version = "0.8.1", features = ["v1"] }
anyhow = "1.0.32"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
