[package]
name = "vonage"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"
description = "Vonage (formerly Nexmo) API bindings"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/vonage-rs"
repository = "https://github.com/ebkalderon/vonage-rs"
documentation = "https://docs.rs/vonage/"
readme = "README.md"
categories = ["api-bindings", "asynchronous"]
keywords = ["vonage", "nexmo", "sms", "phone"]

[dependencies]
anyhow = "1.0"
base64 = "0.12.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hmac = "0.9"
hyper = "0.13"
hyper-tls = "0.4"
jsonwebtoken = "7.2"
md-5 = "0.9"
phonenumber = "0.2.4"
rand = "0.7"
sha-1 = "0.9"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
uuid = { version = "0.8.1", features = ["v1"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
